3d地形与3d迷雾WIP

--- a/mods/ts/sequences/misc.yaml
+++ b/mods/ts/sequences/misc.yaml
@@ -434,8 +434,8 @@ resources:
 		Offset: 0, -12, 1
 		ZRamp: 1
 		IgnoreWorldTint: true
-		ZOffset: 15
-		MeshType: Plane # useless, because the terrain meshtype is fixed
+		ZOffset: 22
+		MeshType: Plane
 	tib01: tib01
 	tib02: tib02
 	tib03: tib03
@@ -469,16 +469,32 @@ veins:
 		Offset: 0, -12, 24
 		MeshType: Plane
 
+# shroud:
+# 	Defaults:
+# 		Offset: 0, -1
+# 		ZRamp: 1
+# 		MeshType: Plane
+# 		BlendMode: Alpha
+# 	shroud:
+# 		Length: *
+# 	fog: fog
+# 		Length: *
+
 shroud:
 	Defaults:
+		Length: 12
 		Offset: 0, -1
-		ZRamp: 1
 		MeshType: Plane
 		BlendMode: Alpha
-	shroud:
-		Length: *
-	fog: fog
-		Length: *
+	typea: shadow
+	typeb: shadow
+		Start: 12
+	typec: shadow
+		Start: 24
+	typed: shadow
+		Start: 36
+	full: fullshroud
+		Length: 1
 
 smallscorches:
 	Defaults:
