--- a/mods/ts/sequences/vehicles.yaml
+++ b/mods/ts/sequences/vehicles.yaml
@@ -55,6 +55,7 @@ hvr:
 	muzzle: gunfire
 		Length: *
 		IgnoreWorldTint: True
+		MeshType: FloatBoard
 	icon: hovricon
 
 lpst.gdi:
@@ -125,6 +126,7 @@ art2:
 		Offset: 0, 0, 24
 		IgnoreWorldTint: True
 		Scale: 2
+		MeshType: FloatBoard
 
 weed:
 	Inherits@defaults: ^VehicleBase
@@ -155,6 +157,7 @@ hmec:
 				Length: 6
 		Facings: 8
 		Length: 6
+		MeshType: FloatBoard
 		IgnoreWorldTint: True
 
 bike:
@@ -188,6 +191,7 @@ bggy:
 		Facings: 8
 		Length: 6
 		IgnoreWorldTint: True
+		MeshType: FloatBoard
 	icon: bggyicon
 		Offset: 0, 0
 
@@ -224,6 +228,7 @@ ttnk:
 		Length: *
 		Offset: 0, 0, 24
 		IgnoreWorldTint: True
+		MeshType: FloatBoard
 	icon: tickicon
 
 stnk:
@@ -253,6 +258,7 @@ mmch:
 		Length: *
 		Offset: 0, 0, 12
 		IgnoreWorldTint: True
+		MeshType: FloatBoard
 	icon: mmchicon
 
 jugg:
@@ -289,6 +295,7 @@ jugg:
 		Offset: 0, 0, 24
 		IgnoreWorldTint: True
 		Scale: 1.6
+		MeshType: FloatBoard
 
 gghunt:
 	Inherits@defaults: ^VehicleBase
