--- a/mods/ts/sequences/trees.yaml
+++ b/mods/ts/sequences/trees.yaml
@@ -193,6 +193,8 @@ veinhole:
 		ShadowStart: 1
 		UseTilesetExtension: true
 		Offset: 0, -36, 0
-		ZRamp: 1
-		MeshType: Plane
+		ZOffset: 1
+		IgnoreWorldTint: False
+		MeshType: TileActor # use MapRenderer
+		BlendMode: None
 
