--- a/mods/ts/sequences/trees.yaml
+++ b/mods/ts/sequences/trees.yaml
@@ -189,12 +189,15 @@ fona15:
 	Defaults: fona15.tem
 
 veinhole:
-	idle:
-		ShadowStart: 1
+	Defaults:
 		UseTilesetExtension: true
 		Offset: 0, -36, 0
 		ZOffset: 1
-		IgnoreWorldTint: False
+		Length: *
+		Facings: 1
 		MeshType: TileActor # use MapRenderer
-		BlendMode: None
-
+	idle:
+		Frames: 1
+	attack:
+		Tick: 80
+		Frames: 1,2,3,4,5,6,7,8,9,10,11,7,6,1
