--- a/mods/ts/sequences/misc.yaml
+++ b/mods/ts/sequences/misc.yaml
@@ -661,6 +661,7 @@ largecraters:
 
 icon:
 	clustermissile: mltiicon
+	chemicalmissile: chemicon
 	ioncannon: ioncicon
 	hunterseeker: detnicon
 	emp: pulsicon
