--- a/mods/ts/sequences/trees.yaml
+++ b/mods/ts/sequences/trees.yaml
@@ -190,7 +190,7 @@ fona15:
 
 veinhole:
 	Defaults:
-		UseTilesetExtension: true
+		UseTilesetExtension: false
 		Offset: 0, -36, 0
 		ZOffset: 1
 		Length: *
