新MeshType: Cell, 实现贴合地形的建造格子预览

--- a/mods/ts/sequences/misc.yaml
+++ b/mods/ts/sequences/misc.yaml
@@ -1,9 +1,8 @@
 overlay:
-	Defaults: place
+	Defaults: place2
 		Offset: 0, -12, 0
 		ZOffset: -2
-		ZRamp: 1
-		MeshType: Plane
+		MeshType: Cell
 	build-valid-snow:
 	build-valid-temperate:
 	build-invalid:
