--- a/mods/ts/sequences/aircraft.yaml
+++ b/mods/ts/sequences/aircraft.yaml
@@ -50,3 +50,22 @@ pod:
 	idle:
 		Facings: 1
 		Length: 1
+
+
+quaddrone-mini:
+	Inherits: ^VehicleOverlays
+	idle:
+		Facings: 1
+		Length: *
+		Scale: 0.9
+	stand:
+		Facings: 1
+		Length: *
+		Scale: 0.9
+	run:
+		Facings: 1
+		Length: *
+		Scale: 0.9
+	die: explosml
+		Length: *
+		IgnoreWorldTint: true
