--- a/mods/ts/sequences/misc.yaml
+++ b/mods/ts/sequences/misc.yaml
@@ -182,6 +182,12 @@ explosion:
 		Tick: 80
 		MeshType: Plane
 		ZOffset: 2048
+	smallpulse_explosion: pulsefx2
+		BlendMode: Additive
+		Tick: 45
+		MeshType: Plane
+		ZOffset: 2048
+		Scale: 0.2
 	small_watersplash: h2o_exp2
 		IgnoreWorldTint: False
 		AlphaFade: False
