--- a/mods/ts/sequences/misc.yaml
+++ b/mods/ts/sequences/misc.yaml
@@ -461,6 +461,18 @@ flameall:
 		Alpha: 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.9, 0.8, 0.7, 0.6, 0.5, 0.4, 0.3, 0.2, 0.1
 		BlendMode: ScreenAdditive
 
+flameball:
+	Defaults:
+		Length: *
+		Tick: 23
+		ZOffset: 1025
+		Scale: 0.6
+		BlendMode: Additive
+		MeshType: Board
+	idle1: flameball1
+	idle2: flameball2
+	idle3: flameball3
+
 largesmoke:
 	idle: lgrysmk1
 		Length: *
