--- a/mods/ts/sequences/aircraft.yaml
+++ b/mods/ts/sequences/aircraft.yaml
@@ -57,15 +57,31 @@ quaddrone-mini:
 	idle:
 		Facings: 1
 		Length: *
-		Scale: 0.9
 	stand:
 		Facings: 1
 		Length: *
-		Scale: 0.9
 	run:
 		Facings: 1
 		Length: *
-		Scale: 0.9
+	die: explosml
+		ZOffset: 511
+		Offset: 0, 0, 24
+		AlphaFade: True
+		Length: *
+		IgnoreWorldTint: True
+		BlendMode: Additive #Additive
+
+rpgdrone:
+	Inherits: ^VehicleOverlays
+	idle:
+		Facings: -32
+		Length: 1
+	stand:
+		Facings: -32
+		Length: 1
+	run:
+		Facings: -32
+		Length: 1
 	die: explosml
 		ZOffset: 511
 		Offset: 0, 0, 24
