--- a/mods/ts/sequences/misc.yaml
+++ b/mods/ts/sequences/misc.yaml
@@ -784,6 +784,7 @@ icon:
 	hunterseeker: detnicon
 	emp: pulsicon
 	droppods: podsicon
+	none: xxicon
 
 clustermissile:
 	up: mltimisl-placeholder # TODO: use voxel
