--- a/mods/ts/sequences/misc.yaml
+++ b/mods/ts/sequences/misc.yaml
@@ -519,7 +519,7 @@ flameball:
 greenflameball:
 	Inherits: flameball
 	Defaults:
-		BlendMode: ScreenAdditive
+		BlendMode: Additive
 
 
 largesmoke:
