--- a/mods/ts/sequences/misc.yaml
+++ b/mods/ts/sequences/misc.yaml
@@ -520,12 +520,13 @@ greenflameball:
 	Inherits: flameball
 	Defaults:
 		BlendMode: ScreenAdditive
+		Scale: 1
 
 
 cloud:
 	Defaults:
 		Length: *
-		ZOffset: 0
+		ZOffset: 1024
 		# Scale: 0.45
 		BlendMode: Alpha
 		AlphaFade: True
@@ -535,7 +536,10 @@ cloud:
 	cloud2: cloud2
 	cloud2d: cloud2d
 
-
+cloudadditive:
+	Inherits: cloud
+	Defaults:
+		BlendMode: Additive
 
 largesmoke:
 	idle: lgrysmk1
