--- a/mods/ts/sequences/aircraft.yaml
+++ b/mods/ts/sequences/aircraft.yaml
@@ -89,3 +89,22 @@ rpgdrone:
 		Length: *
 		IgnoreWorldTint: True
 		BlendMode: Additive #Additive
+
+repairdrone-mini:
+	Inherits: ^VehicleOverlays
+	idle:
+		Facings: -32
+		Length: 1
+	stand:
+		Facings: -32
+		Length: 1
+	run:
+		Facings: -32
+		Length: 1
+	die: explosml
+		ZOffset: 511
+		Offset: 0, 0, 24
+		AlphaFade: True
+		Length: *
+		IgnoreWorldTint: True
+		BlendMode: Additive #Additive
