--- a/mods/ts/sequences/misc.yaml
+++ b/mods/ts/sequences/misc.yaml
@@ -830,6 +830,7 @@ icon:
 	hunterseeker: detnicon
 	emp: pulsicon
 	droppods: podsicon
+	miniveinsw: miniveinswicon
 	none: xxicon
 
 clustermissile:
