--- a/mods/ts/sequences/vehicles.yaml
+++ b/mods/ts/sequences/vehicles.yaml
@@ -407,7 +407,7 @@ limped:
 		Facings: 1
 		ShadowStart: 3
 		Offset: 0, -12
-	icon: limpicon
+	icon: sidebar-gdif|limpicon
 
 reaper:
 	Inherits@defaults: ^VehicleBase
