--- a/mods/ts/sequences/misc.yaml
+++ b/mods/ts/sequences/misc.yaml
@@ -832,6 +832,7 @@ icon:
 	droppods: podsicon
 	miniveinsw: miniveinswicon
 	orcaicon: orcaicon
+	testcystalicon: testcystalicon
 	none: xxicon
 
 clustermissile:
