--- a/mods/ts/sequences/misc.yaml
+++ b/mods/ts/sequences/misc.yaml
@@ -1147,3 +1147,29 @@ auto-tag:
 		ZOffset: 100000
 		IgnoreWorldTint: true
 		MeshType: Plane
+
+airstrikedirection:
+	arrow-t: mouse
+		Start: 2
+		Offset: 0, -19, 0
+	arrow-tr: mouse
+		Start: 3
+		Offset: 15, -15, 0
+	arrow-r: mouse
+		Start: 4
+		Offset: 19, 0, 0
+	arrow-br: mouse
+		Start: 5
+		Offset: 15, 15, 0
+	arrow-b: mouse
+		Start: 6
+		Offset: 0, 19, 0
+	arrow-bl: mouse
+		Start: 7
+		Offset: -15, 15, 0
+	arrow-l: mouse
+		Start: 8
+		Offset: -19, 0, 0
+	arrow-tl: mouse
+		Start: 9
+		Offset: -15, -15, 0
