--- a/mods/ts/sequences/misc.yaml
+++ b/mods/ts/sequences/misc.yaml
@@ -1068,6 +1068,11 @@ podring:
 		Length: *
 		AlphaFade: True
 
+jumpring:
+	idle: podring
+		Length: *
+		AlphaFade: True
+
 fire1:
 	idle-overlay:
 		Length: 17
