--- a/mods/ts/sequences/structures.yaml
+++ b/mods/ts/sequences/structures.yaml
@@ -708,6 +708,62 @@ gatech:
 		UseTilesetCode: false
 		-DepthSprite:
 
+gtdrop:
+	Defaults:
+		Offset: 0,-30
+		UseTilesetCode: false
+	idle:
+		ShadowStart: 3
+	damaged-idle:
+		Start: 1
+		ShadowStart: 4
+	dead:
+		Start: 2
+		ShadowStart: 5
+		Tick: 400
+	idle-dish: gtdrop_a
+		Length: 20
+		Tick: 120
+	damaged-idle-dish: gtdrop_a
+		Start: 20
+		Length: 20
+		Tick: 120
+	idle-lights: gtdrop_b
+		Length: 20
+		Tick: 120
+		IgnoreWorldTint: True
+	idle-lights-bright: gtdrop_b
+		Length: 20
+		Tick: 120
+	damaged-idle-lights: gtdrop_b
+		Start: 20
+		Length: 20
+		Tick: 120
+	damaged-idle-lights-bright: gtdrop_b
+		Start: 20
+		Length: 20
+		Tick: 120
+		IgnoreWorldTint: True
+	idle-strip: gtplug_c
+		Length: 8
+		Tick: 120
+	damaged-idle-strip: gtplug_c
+		Start: 8
+		Length: 8
+		Tick: 120
+	make: gtdropmk
+		Length: 17
+		ShadowStart: 17
+	emp-overlay: emp_fx01
+		Length: *
+		Offset: 0, 0, 25
+		UseTilesetCode: false
+		ZOffset: 512
+		IgnoreWorldTint: True
+	icon: gbayicon
+		Offset: 0, 0
+		UseTilesetCode: false
+
 gasand:
 	Defaults:
 		Offset: 0, -12, 12
